Add some changes to be compatible with java 8